<resources>
    <string name="app_name">VatraDePizza</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="privacy_policy">Politica de confidentialitate</string>
    <string name="contact_us">Contacteaza-ne</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_policy">Policy</string>
    <string name="shopping_cart">Cos de cumparaturi</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name">Numele Complet</string>
    <string name="confirmPassword">Rescrie parola</string>
    <string name="password">Parola min 6 caractere</string>
    <string name="phone">Telefon</string>
    <string name="email">Email</string>
    <string name="register">Inregistreaza-te</string>
    <string name="confirm">Confirma</string>
    <string name="password_hint">minim 6 caractere</string>
    <string name="trimite_messaj">Trimite messaj</string>
    <string name="suna_ne">Suna-ne</string>
    <string name="message">mesaj</string>
    <string name="pizza">Pizza</string>
    <string name="offer">Oferte</string>
    <string name="sweets">Desert</string>
    <string name="salad">Salata</string>
    <string name="pasta">Paste</string>
    <string name="souce">Sosuri</string>
    <string name="Juice">Sucuri</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_pizza">MenuPizzaActivity</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="to_cart">Adauga in cos</string>
    <string name="toppings">Topping-uri (3.00 lei buc)</string>
    <string name="ham">Sunca</string>
    <string name="salami">Salam</string>
    <string name="pepper">Ardei</string>
    <string name="corn">Porumb</string>
    <string name="olives">Masline</string>
    <string name="mushrooms">Ciuperci</string>
    <string name="feta">Feta</string>
    <string name="onion">Ceapa</string>
    <string name="order">Comanda</string>
</resources>
