<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactUsActivity"
    tools:showIn="@layout/activity_contact_us">

    <TextView
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="35dp"
        android:text="@string/contact_us" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/layoutMargins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <include layout="@layout/contact_info" />

            <TextView
                style="@style/bodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/et_confirmPassword"
                android:text="@string/message" />

            <EditText
                android:id="@+id/et_message"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <Button
                style="@style/buttonMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button_background"
                android:onClick="onSendMessage"
                android:text="@string/trimite_messaj"
                android:textColor="#fff" />

            <Button
                style="@style/buttonMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button_background"
                android:onClick="onCall"
                android:text="@string/suna_ne"
                android:textColor="#fff" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>