<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/et_name"
        android:text="@string/name" />

    <EditText
        android:id="@+id/et_name"
        style="@style/bodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <TextView
        style="@style/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/et_email"
        android:text="@string/email" />

    <EditText
        android:id="@+id/et_email"
        style="@style/bodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <TextView
        style="@style/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/et_phone"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/et_phone"
        style="@style/bodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/phone"
        android:ems="10"
        android:inputType="phone"
        android:textSize="14sp" />
</LinearLayout>